<resources>
    <string name="app_name">TLU Data Warehouse</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="master_password">Master Password</string>
    <string name="application_logo">Application logo</string>
    <string name="welcome_to_tlu_data_warehouse">Welcome to TLU Data WareHouse. This is your first time accessing this application, please create a password for authentication</string>
    <string name="master_password_notice">Create your master password. Please remember it for change secondary password and recovery password if you forget it, you won\'t recovery secondary password</string>
    <string name="create_new_master_pw">Create new master password</string>
    <string name="enter_master_password">Enter Master Password</string>
    <string name="confirm_master_password">Confirm Master Password</string>
    <string name="next">Next</string>
    <string name="secondary_password">Secondary password</string>
    <string name="enter_secondary_password">Enter secondary password</string>
    <string name="confirm_secondary_password">Confirm secondary password</string>
    <string name="email_for_recovery_password">Email for recovery password</string>
    <string name="enter_email">Enter email</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="by_clicking_continue_you_agree_to_our_terms_of_service_and_privacy_policy">By clicking continue, you agree to our <b>Terms of Service</b> and <b>Privacy Policy</b>.</string>
    <string name="password_notice">password notice</string>
    <string name="master_pw_note">Note: Master password is very important! It is used to recover and change password. If you forget it, you will not able to use the application and will lose all data.</string>
    <string name="folder_image">Folder Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_quantity"> 0 Files</string>
    <plurals name="file_quantity">
        <item quantity="one">%d File</item>
        <item quantity="other">%d Files</item>
    </plurals>
    <string name="lock_file">LOCK FILE</string>
    <string name="select_button">select button</string>
    <string name="no_file_yet">No file yet</string>
    <string name="choose_image">Choose new image</string>
    <string name="choose_new_video">Choose new video</string>
    <string name="choose_new_audio">Choose new audio</string>
    <string name="choose_new_document">Choose new document</string>
    <string name="dialog_title">Choose the type of file you want to lock</string>
    <string name="settings">Settings</string>
    <string name="unlock">Unlock</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="password_settings">Password Settings</string>
    <string name="active_password">Active password</string>
    <string name="change_master_password">Change master password</string>
    <string name="open">open</string>
    <string name="recovery_email_settings">Recovery email settings</string>
    <string name="email_notice">You must have an email address, so that we send your password when you forgot</string>
    <string name="change_recovery_email">Change recovery email</string>
    <string name="authenticate_title">Enter your master password</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="new_email">New email</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="new_password">New password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="enter_new_master_password">Enter new master password</string>
    <string name="new_master_password">New master password</string>
    <string name="forgot_password_click_here">Forgot password? Click here</string>
</resources>