<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingVertical="48dp"
    android:paddingHorizontal="16dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="24dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/add_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        style="?attr/materialButtonOutlinedStyle"

        />

    <Button
        android:id="@+id/add_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_new_video"
        style="?attr/materialButtonOutlinedStyle"

       />

    <Button
        android:id="@+id/add_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_new_audio"
        style="?attr/materialButtonOutlinedStyle"

         />

    <Button
        android:id="@+id/add_document"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_new_document"
        style="?attr/materialButtonOutlinedStyle"

         />


</LinearLayout>