<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/setting_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#42828282"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:text="@string/password_settings"
            android:textColor="#6B000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/password_settings_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setting_title">

<!--            <com.google.android.material.switchmaterial.SwitchMaterial-->
<!--                android:id="@+id/active_password"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:checked="true"-->
<!--                android:paddingHorizontal="4sp"-->
<!--                android:text="@string/active_password"-->
<!--                android:textSize="18sp" />-->

<!--            <com.google.android.material.divider.MaterialDivider-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_marginVertical="4sp" />-->

            <LinearLayout
                android:id="@+id/change_master_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/change_master_password"
                    android:textColor="#36A4E2"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/open"
                    android:src="@drawable/baseline_arrow_forward_ios_24" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="4sp" />

            <LinearLayout
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Change password"
                    android:textColor="#36A4E2"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/open"
                    android:src="@drawable/baseline_arrow_forward_ios_24" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/email_change_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#42828282"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:text="@string/recovery_email_settings"
            android:textColor="#6B000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_settings_block" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16sp"
            android:layout_marginTop="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_change_tv">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_notice"
                android:textStyle="italic"
                android:textColor="#ED1010"
                android:layout_marginBottom="16dp"

                />

            <LinearLayout
                android:id="@+id/change_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/change_recovery_email"
                    android:textColor="#36A4E2"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/open"
                    android:src="@drawable/baseline_arrow_forward_ios_24" />
            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>