<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.LockedFileListFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/file_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.002" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/no_file_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/no_file_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/plagiarism"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/no_file_yet"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/no_file_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/locked_file_control"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="12dp"
            android:visibility="gone"
            >
            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/unlock_file_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:text="@string/unlock" />

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent"/>
            
            <Button
                android:id="@+id/delete_file_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F44336"
                android:text="@string/delete" />
            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/share_file_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#2196F3"
                android:text="@string/share" />
            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>